@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10559] "Låsning af FedoraHandle"
    - bug [11406] "Vi skal bruge en condition-klasse"
    - bug [11292] "dk/dbc/opensearch/common/metadata/DublinCoreTerms.java bliver tilsyneladende ikke brugt"
    - bug [11293] "DocbookAnnotate* kan slettes."
